<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:hint="@string/_0"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        android:textAlignment="textEnd"
        android:textColor="#ffffff"
        android:textColorHint="@color/white"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="125dp"
        android:baselineAligned="true"
        android:background="@color/black"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:background="@color/black"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/_7"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn8"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/_8"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/_9"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@color/black"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/_4"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/_5"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/_6"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/_2"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/_3"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/red"
                    android:textSize="30sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btnComma"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/red"
                    android:text="@string/_3145"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey"
                android:text="@string/clear"
                android:textColor="#000000"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:addStatesFromChildren="false"
            android:background="@color/black"
            android:clipChildren="false"
            android:measureWithLargestChild="false"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:backgroundTint="@color/red"
                android:text="@string/divide"
                android:textSize="40sp"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/multiply"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/subtract"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:text="@string/add"
                android:textSize="40sp"/>

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:padding="28dp"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="40sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>